--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.0.2",
     "@astrojs/rss": "^2.1.0",
-    "astro": "^2.0.6"
+    "@astrojs/tailwind": "^3.0.1",
+    "astro": "^2.0.6",
+    "preact": "^10.11.3",
+    "tailwindcss": "^3.2.4"
   }
 }
